tdf#98665 optimize table format style access

Work in progress!

Change-Id: Ib8462c32311ccc162ec290fe4eec70820855a378